[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Orilx"},
]
license = {text = "AGPLv3"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "pip>=22.3",
    "setuptools>=65.5.0",
    "nb-cli>=0.6.9",
    "ruamel.yaml<1.0.0,>=0.17.21",
    "psutil<6.0.0,>=5.9.1",
    "gmqtt<1.0.0,>=0.6.11",
    "gino<2.0.0,>=1.0.1",
    "slowapi<1.0.0,>=0.1.5",
    "pillow<10.0.0,>=9.2.0",
    "lxml<5.0.0,>=4.9.1",
    "nonebot-adapter-onebot>=2.2.0",
    "nonebot-plugin-apscheduler>=0.2.0",
    "nonebot-plugin-htmlrender>=0.2.0.1",
    "nonebot-adapter-console>=0.2.1",
    "websockets>=10.4",
]
name = "Niko-py"
version = "0.1.8"
description = "基于Nonebot2开发的QQ机器人"
readme = "README.md"

[project.urls]

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_htmlrender"]
plugin_dirs = ["plugins"]
